Upgrading cargo-maven2-plugin and gmavenplus-plugin + disabling JDK 16 builds until Lombok provides compatibility