@@ -2290,7 +2290,7 @@ under the License.
         <plugin>
           <groupId>org.codehaus.cargo</groupId>
           <artifactId>cargo-maven2-plugin</artifactId>
-          <version>1.8.2</version>
+          <version>1.8.3</version>
           <configuration>
             <configuration>
               <type>standalone</type>
@@ -2496,7 +2496,7 @@ under the License.
       <plugin>
         <groupId>org.codehaus.gmavenplus</groupId>
         <artifactId>gmavenplus-plugin</artifactId>
-        <version>1.11.1</version>
+        <version>1.12.0</version>
         <dependencies>
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -2955,6 +2955,30 @@ under the License.
       <modules>
         <module>docker</module>
       </modules>
+    </profile>
+
+    <profile>
+      <id>jdk16-plus</id>
+
+      <activation>
+        <jdk>[16,)</jdk>
+      </activation>
+
+      <properties>
+        <argLine>-Xms512m -Xmx1024m -Xss256k -Dnet.bytebuddy.experimental=true</argLine>
+      </properties>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
